refactoring of algorithm options